--- a/config
+++ b/config
@@ -38,7 +38,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # Lock Screen
-bindsym $mod+Shift+x exec i3lock --color "#000000"
+# bindsym $mod+Shift+x exec i3lock --color "#000000"
+bindsym $mod+Shift+x exec /usr/share/goobuntu-desktop-files/xsecurelock.sh
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec dmenu_run
@@ -166,7 +167,6 @@ bar {
 
 exec_always --no-startup-id xmodmap -e "clear lock"
 exec_always --no-startup-id xmodmap -e "keycode 66 = Escape NoSymbol Escape"
-exec_always --no-startup-id volumeicon
 exec_always --no-startup-id blueman-applet
 exec_always --no-startup-id ~/.config/i3/g-layout.sh
 
